--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<div id="switcher">
 		<div class="center">
 			<ul>
-				<li class="logoTop" id="sj2"><a href="#">View SAC App on deivce:</a>
+				<li class="logoTop" id="sj2"><a href="#">View SAC App on device:</a>
 				</li>
 				<div id="Device">
 					<li class="device-monitor"><a href="javascript:">
