Set iPad horizontal as default device.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 fixHeight();
             }).resize();
 
-            $('.icon-monitor').addClass('active');
+            $('.icon-mobile-1').addClass('active');
 
             $(".icon-mobile-3").click(function () {
                 $("#by").css("overflow-y", "auto");
@@ -81,7 +81,7 @@
 				</li>
 				<div id="Device">
 					<li class="device-monitor"><a href="javascript:">
-							<div class="icon-monitor active">
+							<div class="icon-monitor">
 							</div>
 						</a></li>
 					<li class="device-mobile"><a href="javascript:">
@@ -117,7 +117,7 @@
 		</div>
 	</div>
 	
-	<div id="iframe-wrap" class="full-width">
+	<div id="iframe-wrap" class="mobile-width">
 		<iframe id="iframe" src="https://master-toggle-app-design.eu2cnry.projectorca.cloud/sap/fpa/ui/tenants/fd23e/app.html#;mode=embed;view_id=appBuilding;appId=BE52F2EDC26CB0C06B997C3086B90B7F" frameborder="0" width="100%"></iframe>
 	</div>
 	
