Add GitHub link on index page.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<div id="switcher">
 		<div class="center">
 			<ul>
-				<li class="logoTop" id="sj2"><a href="#">View SAC App on device:</a>
+				<li class="logoTop" id="sj2"><a href="https://github.com/IvanGongSap/SACViewer" title="Help on GitHub">View SAC App on device:</a>
 				</li>
 				<div id="Device">
 					<li class="device-monitor"><a href="javascript:">
@@ -113,8 +113,8 @@
 					<input name="app" type="radio" value="https://master-toggle-app-design.eu2cnry.projectorca.cloud/sap/fpa/ui/tenants/fd23e/app.html#;mode=embed;view_id=appBuilding;appId=BE52F2EDC26CB0C06B997C3086B90B7F" checked="checked" /><label>Sample app(for all devices)</label>
 				</li>
 			</ul>
-			
 		</div>
+		
 	</div>
 	
 	<div id="iframe-wrap" class="mobile-width">
