--- a/index_eu.html
+++ b/index_eu.html
@@ -21,7 +21,6 @@
                 fixHeight();
             }).resize();
 
-            //$('.icon-monitor').addClass('active');
 			$('.icon-mobile-1').addClass('active');
 
             $(".icon-mobile-3").click(function () {
@@ -78,7 +77,7 @@
 	<div id="switcher">
 		<div class="center">
 			<ul>
-				<li class="logoTop" id="sj2"><a href="#">View SAC App on device:</a>
+				<li class="logoTop" id="sj2"><a href="https://github.com/IvanGongSap/SACViewer" title="Help on GitHub">View SAC App on device:</a>
 				</li>
 				<div id="Device">
 					<li class="device-monitor"><a href="javascript:">
